--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
+    "simple-icons": "^15.4.0",
     "socket.io-client": "^4.8.1",
     "y-monaco": "^0.1.6",
     "y-websocket": "^3.0.0",
